<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">RPlan</string>
    <!-- <string name="action_settings">Settings</string> -->
    <string name="action_settings">Настройки</string>
    <!-- <string name="title_activity_task_edit">Task Editting</string> -->
    <string name="title_activity_task_edit">Редактирование задачи</string>
    <!-- <string name="description">Description</string> -->
    <string name="description">Описание</string>
    <!-- <string name="add_note">+Note</string> -->
    <string name="add_note">+Заметка</string>
    <!-- <string name="add_subtask">+Task</string> -->
    <string name="add_subtask">+Задача</string>
    <!-- <string name="tb_manage_notes">Manage</string> -->
    <string name="tb_manage_notes">Управление</string>
    <!-- <string name="tb_simple_notes">Simple</string> -->
    <string name="tb_simple_notes">Просто</string>
    <string name="unsupported_note_kind">Неподдерживаемый вид заметки</string>
    <!-- <string name="bt_move">Move</string> -->
    <string name="bt_move">Сдвинуть</string>
    <!-- <string name="bt_yes">Yes</string> -->
    <string name="bt_yes">Да</string>
    <!-- <string name="bt_no">No</string> -->
    <string name="bt_no">Нет</string>
    <!-- <string name="msg_remove_task_q">Remove task?</string> -->
    <string name="msg_remove_task_q">Удалить задачу?</string>
    <!-- <string name="task_title_font_scale">Task title font scale</string> -->
    <string name="task_title_font_scale">Масштаб шрифта заголовка задачи</string>
    <!-- <string name="remove_all_">Remove ALL!!!</string> -->
    <string name="remove_all_">Удалить ВСЁ!!!</string>
    <!-- <string name="remove_all_tasks_">Remove all tasks?</string> -->
    <string name="remove_all_tasks_">Удалить все задачи?</string>
    <!-- <string name="export_share_>Export (Share)</string> -->
    <string name="export_share_">Экспорт (Поделиться)</string>
    <!-- <string name="import_">Import</string> -->
    <string name="import_">Импорт</string>
    <string name="imported_replaces_current_">Импортированные данные заменят существующие.</string>
    <string name="insert_imported_here_">Вставьте сюда импортируемые данные резервной копии.</string>
    <string name="task_pointer_radius_summary">Определяет размер точки на границе экрана, указывающей на задачу за пределами видимой части плана.</string>
    <string name="task_pointer_radius">Радиус указателя на задачу</string>
    <string name="subtask_padding_reduction">Уменьшение отступа между подзадачами</string>
    <string name="subtask_padding_reduction_summary">Позволяет отображать развёрнутые задачи на плане компактнее. Отрицательные значения увеличивают отступ.</string>
    <string name="color">Цвет</string>
    <string name="task_popup_remove">Удалить</string>
    <string name="task_popup_unpin">Открепить</string>
    <string name="task_popup_pin">Закрепить</string>
    <string name="task_popup_duplicate">Дублировать</string>
    <string name="cb_move_to_current_place">Поместить в текущее место</string>
</resources>
