<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <EditTextPreference
        android:title="@string/task_title_font_scale"
        android:key="pref_taskTitleFontScale"
        android:defaultValue="1.5"
        />
    <EditTextPreference
        android:key="pref_taskPointerRadius"
        android:title="@string/task_pointer_radius"
        android:summary="@string/task_pointer_radius_summary"
        android:defaultValue="15"
        />
    <EditTextPreference
        android:key="pref_subtaskPaddingReduction"
        android:title="@string/subtask_padding_reduction"
        android:summary="@string/subtask_padding_reduction_summary"
        android:defaultValue="5"
        />

</PreferenceScreen>
