<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >

    <edu.real.android.plan.IndentScrollView
        android:id="@+id/sv_notes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/et_task_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text"
                    android:maxLines="1" >

                    <requestFocus />
                </EditText>

                <Button
                    android:id="@+id/bt_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/color" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <EditText
                android:id="@+id/et_task_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" />

            <LinearLayout
                android:id="@+id/ll_task_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/ll_buttons_below_task_notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </edu.real.android.plan.IndentScrollView>

    <LinearLayout
        android:id="@+id/ll_format_buttons"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="end"
    >

        <ToggleButton
            android:id="@+id/tb_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="24dp"
            android:textOff="B"
            android:textOn="B"
            android:textStyle="bold" />

        <ToggleButton
            android:id="@+id/tb_italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="24dp"
            android:textOff="I"
            android:textOn="I"
            android:textStyle="italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:id="@+id/ll_buttons_in_toolbar"
        android:gravity="end" >

        <ToggleButton
            android:id="@+id/tb_edit_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="24dp"
            android:textOff="@string/tb_simple_notes"
            android:textOn="@string/tb_manage_notes" />

        <ToggleButton
            android:id="@+id/tb_drag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="24dp"
            android:textOff="↕"
            android:textOn="↕" />

    </LinearLayout>

</LinearLayout>
